opam-version: "1.2"
version: "0.1"
name: "nanomsg"
maintainer: "Didier Wenzek <didier.wenzek@acidalie.com>"
authors: ["Didier Wenzek <didier.wenzek@acidalie.com>"]
homepage: "https://github.com/didier-wenzek/ocaml-nanomsg"
bug-reports: "https://github.com/didier-wenzek/ocaml-nanomsg/issues"
dev-repo: "https://github.com/didier-wenzek/ocaml-nanomsg.git"
license: "MIT"
build: [ ["dune" "build" "-p" name "-j" jobs] ]
build-test: [ "dune" "runtest" "-p" name "-j" jobs ]
depends: [
  "lwt"
  "dune" {build & >= "1.0"}
  "oUnit" {test}
  "bigstring" {test}
]
depexts: [
]
